# MediaLibrary

./: .gitmodules  CMakeLists.txt
include/MediaLibrary/: MediaLibrary.h  types.h
src/: MediaLibrary.cpp  types.cpp
